src/css/site.css
/* ... */
.track-btn2 {
	height: 31px;
	/*float:left;*/
	cursor: pointer;
	border: none;
	font-size: 9px;
	font-family: 'latobold';
	color: #ffffff;
	font-weight: bold;
	width: 140px;
	background: #3A6152;
	border-radius: 4px;
	text-transform: uppercase;
	letter-spacing: 1px;
	outline: 1px solid #ffffff;
	outline-offset: -3px;
}

.track-btn2:hover {
	background: #2d4f42;
	color: #ffffff;
}

.track-btn-big {
	height: 35px;
	/*float:left;*/
	cursor: pointer;
	border: none;
	font-size: 11px;
	font-family: 'latobold';
	color: #ffffff;
	font-weight: bold;
	width: 175px;
	background: #3A6152;
	border-radius: 4px;
	text-transform: uppercase;
	letter-spacing: 0px;
	outline: 1px solid #ffffff;
	outline-offset: -3px;
}

.track-btn-big:hover {
	background: #2d4f42;
	color: #ffffff;
}



.track-btn-small {
	height: 25px;
	/*float:left;*/
	cursor: pointer;
	border: none;
	font-size: 9px;
	font-family: 'latobold';
	color: #ffffff;
	font-weight: bold;
	width: 115px;
	background: #3A6152;
	border-radius: 4px;
	outline: 1px solid #ffffff;
	outline-offset: -3px;
	text-transform: uppercase;
	letter-spacing: 1px;
}

.track-btn-small:hover {
	background: #2d4f42;
	color: #ffffff;
}


.calc-btn {
	background: url(https://d294w6g1afjpvs.cloudfront.net/images/track-btn.png) no-repeat;
	width: 105px;
	height: 25px;
	padding: 0px;
	margin: 2px 0 0 10px;
	cursor: pointer;
	border: none;
	font-size: 12px;
	color: #fff;
}

.calc-btn:hover {
	filter: alpha(opacity=70);
	opacity: 0.7;

}

/*.lower-poster-area .bidnow-btn{
	background:url(https://d294w6g1afjpvs.cloudfront.net/images/bid-now-btn.png) no-repeat;
	width:92px;
	height:19px;
	padding:0px;
	margin:2px 0 0 0;
	float:left;
	cursor:pointer;
	border:none;
	font-family:Arial, Helvetica, sans-serif;
	font-size:12px;
	color:#096785;
}*/

.bidnow-btn,
.bidnow-hammer-btn,
.bidnow-hammer-btn2 {
	width: 98px;
	height: 28px;
	padding: 0;
	margin: 8px 8px 0 0px;
	cursor: pointer;
	border: none;
	font-size: 12px;
	color: #ffffff;
	font-weight: bold;
	float: right;
	text-align: center;
	outline: 1px solid #ffffff;
	outline-offset: -3px;
}

.bidnow-btn {
	background: #3A6152;
	border-radius: 4px;
	color: #ffffff;
}

.makeoffer {
	background-image: url(https://d294w6g1afjpvs.cloudfront.net/images/make-offer-btn.png);
	background-repeat: no-repeat;
	background-position: left top;
}

.BuyNow {
	color: #ffffff;
	width: 101px;
	margin: 0px 8px 0 0px;
	background: #c0392b;
	background-image: none;
	border-radius: 4px;
}

.bidnow-hammer-btn {
	margin: 2px 0px 0 0px;
	background: #3A6152;
	border-radius: 4px;
	color: #ffffff;
	width: 86px;
}

.bidnow-hammer-btn2 {
	margin: 5px 5px 5px 0px;
	background: #3A6152;
	border-radius: 4px;
	color: #ffffff;
	width: 86px;
}

.lower-poster-area .seeall-btn {
	width: 71px;
	height: 18px;
	padding: 0px;
	margin: 0px;
	/*float:left;*/
	cursor: pointer;
	border: none;
	color: #fff;
	font-weight: bold;
	text-align: center;
	background-image: url(https://d294w6g1afjpvs.cloudfront.net/images/more-btn.png);
	background-repeat: no-repeat;
}

.lower-poster-area .seeall-btn:hover {
	width: 71px;
	height: 18px;
	color: #d2ecfb;
	background-image: url(https://d294w6g1afjpvs.cloudfront.net/images/more-btn_hover.png);
	background-repeat: no-repeat;
}

.lower-poster-area .more-btn {
	background: url(https://d294w6g1afjpvs.cloudfront.net/images/more-btn.png) no-repeat;
	width: 88px;
	height: 27px;
	padding: 0px;
	margin: 0px 10px 0 10px;
	float: left;
	cursor: pointer;
	border: none;
	font-size: 12px;
	color: #fff;
	font-weight: bold;
	text-align: center;
}

.lower-poster-area .more-btn:hover {
	background: url(https://d294w6g1afjpvs.cloudfront.net/images/more-btn_hover.png) no-repeat;
	color: #d2ecfb;
}

.lower-poster-area {
	/*width:210px;
	float:right;*/
	padding: 0px;
	margin: 0px;
}

.poster-end-bg-container {
	width: 965px;
	padding: 0px;
	margin: 0px 0px 20px 0px;
	float: left;
}

.poster-end-bg-container .left-corner {
	background: url(https://d294w6g1afjpvs.cloudfront.net/images/poster-lower-corner.png) no-repeat;
	width: 13px;
	height: 19px;
	padding: 0px;
	margin: 0px;
	float: left;
}

.poster-end-bg-container .midrept {
	background: url(https://d294w6g1afjpvs.cloudfront.net/images/poster-lower-midrept.png) repeat-x;
	width: 939px;
	height: 19px;
	padding: 0px;
	margin: 0px;
	float: left;
}

.poster-end-bg-container .right-corner {
	background: url(https://d294w6g1afjpvs.cloudfront.net/images/poster-lower-corner-right.png) no-repeat;
	width: 13px;
	height: 19px;
	padding: 0px;
	margin: 0px;
	float: left;
}

/*----------------- Auction items Ends------------------ */

/*------------------About Us starts----------------------------*/

#wrapper .aboutus-area {
	width: 940px;
	padding: 20px 19px 22px 32px;
	margin: 0px;
	float: left;
}

#wrapper .aboutus-area h2 {
	font-size: 18px;
	color: #262626;
	line-height: 28px;
}

#wrapper .aboutus-area p {

	font-size: 11px;
	color: #2d2c2c;
	text-align: justify;
	line-height: 15px;
	padding: 10px 0 0 0;
}

#wrapper .aboutus-area .more-big-btn {
	background: url(https://d294w6g1afjpvs.cloudfront.net/images/bigmore-btn.png) no-repeat;
	width: 78px;
	height: 25px;
	padding: 0px;
	margin: 20px 0 0 0;
	float: left;
	cursor: pointer;
	border: none;
	font-size: 12px;
	color: #096785;
	text-align: center;
}

/*------------------About Us ends----------------------------*/

/*-----------------Content------------------ */


/*---------------inner page css starts--------------------------*/

#inner-container {
	/*width:978px;*/
	width: 950px;
	padding: 0px;
	margin: 24px 0 0 15px;
	float: left;
	display: block;
}

#inner-container2 {
	/*width:978px;*/
	width: 978px;
	padding: 0px;
	margin: 24px 0 0 0px;
	float: left;
	display: block;
}


.tabbed-inner-nav-left {
	/*background:url(https://d294w6g1afjpvs.cloudfront.net/images/tabbed-grey-bg_left.png) no-repeat left top;*/
	height: 26px;
}
/* ... */

